Stone circles now uses a whitelist rather than blacklist